# OpenXRControllerDemo

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  UDP_JSON_FORMAT.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: GraphicsRenderer.cpp  GraphicsRenderer.h  InputManager.cpp  InputManager.h  OpenXRControllerApp.cpp  OpenXRControllerApp.h  main.cpp
framework/: CMakeLists.txt
framework/src/: AndroidOpenXrProgram.cpp  AndroidOpenXrProgram.h  Configurations.h  ExceptionHandlerProgram.cpp  ExceptionHandlerProgram.h  IXrProgram.h
framework/src/graphicsPlugin/: GLGeometry.cpp  GLGeometry.h  GLGltfHelper.h  GLProgram.cpp  GLProgram.h  GraphicsConstants.h  IXrGraphicsPlugin.h  OpenGLESGraphicsPlugin.cpp  OpenGLESGraphicsPlugin.h  SwapchainImageData.cpp  SwapchainImageData.h  VulkanGraphicsPlugin.h
framework/src/gui/: GuiWindow.cpp  GuiWindow.h  IGuiRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h
framework/src/model/: Scene.h
framework/src/model/collision/: ICollisionDetector.h  SampleCollisionDetector.cpp  SampleCollisionDetector.h
framework/src/model/geometry/: AABB.cpp  AABB.h  Intersection.cpp  Intersection.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  TriPrimitiveMesh.cpp  TriPrimitiveMesh.h
framework/src/model/objects/: CartesianBranch.cpp  CartesianBranch.h  Cube.cpp  Cube.h  GltfModel.cpp  GltfModel.h  GuiPlane.cpp  GuiPlane.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  SkyBox.cpp  SkyBox.h  TruncatedCone.cpp  TruncatedCone.h
framework/src/openxrWrapper/: BasicOpenXrWrapper.cpp  BasicOpenXrWrapper.h
framework/src/openxrWrapper/extensions/: BDBodyTracking.cpp  BDBodyTracking.h  BDControllerInteraction.h  EXTFuture.cpp  EXTFuture.h  EXTPerformanceSettings.cpp  EXTPerformanceSettings.h  ExtensionFeaturesManager.cpp  ExtensionFeaturesManager.h  FBCompositionLayerSetting.cpp  FBCompositionLayerSetting.h  FBDisplayRefreshRates.cpp  FBDisplayRefreshRates.h  IOpenXRExtensionPlugin.h  KHRAndroidThreadSetting.cpp  KHRAndroidThreadSetting.h  PICOBodyTracking.cpp  PICOBodyTracking.h  PICOCompositionLayerSetting.cpp  PICOCompositionLayerSetting.h  Passthrough.cpp  Passthrough.h
framework/src/platformPlugin/: AndroidPlatformPlugin.h  IXrPlatformPlugin.h
framework/src/util/: CheckUtils.h  Common.h  ExceptionUtils.h  GltfUtils.cpp  GltfUtils.h  LogUtils.h  MathUtils.h  PbrModelUtils.cpp  PbrModelUtils.h  RandomGenerator.h
gradle/wrapper/: gradle-wrapper.properties
openxr/openxr/: openxr.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
